crates/carta/tests/snapshots/golden_writer__latex__common__blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{quote}
quoted

more lines here
\end{quote}
