crates/carta/tests/snapshots/golden_writer__latex__common__bullet-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{itemize}
\tightlist
\item
  a
\item
  b
\item
  c
\end{itemize}
