crates/carta/tests/snapshots/golden_writer__latex__common__code-block-trailing-newline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{verbatim}
first line
second line
\end{verbatim}
