crates/carta/tests/snapshots/golden_writer__latex__common__code-span-space-padded.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\texttt{\ x\ }

\texttt{\ }

\texttt{\textasciigrave{}x}
